# python_flask_sqlalchemy

./: app.py  pyproject.toml
migrations/versions/: 386ed6ee009a_initialize_the_db.py
sqlalchemy_tutorial/: app.py  app_factory.py  db_factory.py
sqlalchemy_tutorial/migrations/versions/: 17f142b98494_initial_migration.py
sqlalchemy_tutorial/models/: user.py
src/: __init__.py
src/di/: di_container.py
src/models/: user_model.py
src/repositories/: user_repository.py  user_repository_impl.py
src/services/: user.py  user_service.py
src/web/: user_routes.py
tests/: conftest.py  test_app_factory.py
tests/services/: test_user_service.py
tests/web/: conftest.py  test_user_routes.py
